--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_C_STANDARD 99)
 
 add_executable(BusyMcs Busy/BusyMcs.c)
 add_executable(PpMcs Population/PpMcs.c)
+add_executable(Hope Hope/Hope.c)
