--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,5 @@ add_executable(BusyMcs Busy/BusyMcs.c)
 add_executable(PpMcs Population/PpMcs.c)
 add_executable(PpHot Population/PpHot.c)
 add_executable(Hope Hope/Hope.c)
+
+add_executable(MppMcs MemoryPp/MppMcs.c)
