Busy: 改为教学，可以教busy个体，busy不能教别人

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,5 @@ add_executable(PpHot Population/PpHot.c)
 add_executable(Hope Hope/Hope.c)
 
 add_executable(MppMcs MemoryPp/MppMcs.c)
+
+add_executable(Demo Demo.c)
