--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(DemoC C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(BusyMcs Busy/BusyMcs.c)
+add_executable(BusyHot Busy/BusyHot.c)
+
+
 add_executable(PpMcs Population/PpMcs.c)
 add_executable(PpHot Population/PpHot.c)
 add_executable(Hope Hope/Hope.c)
